# collision_avoidance

./: .gitignore  CMakeLists.txt  LICENSE  package.xml
msg/: ObstacleInfo.msg
src/: sonar_obstacle_detector.cpp  stereo_obstacle_detector.cpp
